💄 style: update style

--- a/SwashbucklerDiary/Components/DialogComponents/PreviewImageDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PreviewImageDialog.razor
@@ -8,7 +8,7 @@
     <MCard Class="fill-height theme-element"
            Ripple="false"
            OnClick="()=>InternalValueChanged(false)">
-        <div class="py-sm-10 fill-height">
+        <div class="pb-sm-7 fill-height">
             <MImage Src="@Src"
                     Width="@("100%")"
                     Height="@("100%")"
