♻️ refactor(DiaryList): ScrollElement use CascadingParameter

--- a/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
+++ b/SwashbucklerDiary/Components/MyComponents/ScrollContainer.razor
@@ -8,6 +8,8 @@
     <MContainer Class="@("my-container "+ ContentClass)"
                 Style="@ContentStyle"
                 Fluid="true">
-        @ChildContent
+        <CascadingValue Value="Ref" Name="ScrollElement">
+            @ChildContent
+        </CascadingValue>
     </MContainer>
 </div>
