--- a/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PrivacyLibraryPage.razor
@@ -31,10 +31,9 @@
     </MButton>
 </MAppBar>
 
-<ScrollContainer Id="privacy-library-diaries-scroll">
+<ScrollContainer>
     <DiaryCardList @bind-Tags="Tags"
                    Value="Diaries"
-                   ScrollParent="@("#privacy-library-diaries-scroll")"
                    NotFoundText="@(IsSearchFiltered ? I18n.T("Search.Not Found"):null)" />
 </ScrollContainer>
 
