--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -1,55 +1,15 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits MyComponentBase
 
-<div class="my-card-list @(Class)">
-    @foreach (var item in InternalValue)
-    {
-        <DiaryCard @key="item.Id"
-                   Value="item"
-                   Class="@CardClass"
-                   Privacy="ShowPrivacy"
-                   Icon="ShowIcon"
-                   DateFormat="@DateFormat"
-                   OnTag="HandleTag"
-                   OnCopy="HandleCopy"
-                   OnDelete="OpenDeleteDialog"
-                   OnTopping="HandleTopping"
-                   OnExport="OpenExportDialog"
-                   OnPrivacy="HandlePrivacy"
-                   OnClick="HandleClick">
-        </DiaryCard>
-    }
-    <MInfiniteScroll Style="width:100%;"
-                     OnLoad="@OnLoad"
-                     Parent="ScrollParent"
-                     EmptyText="@(string.Empty)"
-                     LoadingText="@(string.Empty)">
-        <LoadMoreContent Context="load">
-            <div class="@(_internalValue.Any()?"":"d-none")">
-                <MButton Icon="true"
-                         OnClick="@load">
-                    <MIcon>mdi-reload</MIcon>
-                </MButton>
-            </div>
-        </LoadMoreContent>
-    </MInfiniteScroll>
-</div>
+@if (Value.Any())
+{
+    <DiaryCardListContent Value="Value"
+                          Class="@Class"
+                          CardClass="@CardClass"
+                          Tags="Tags"
+                          TagsChanged="TagsChanged"
+                          OnUpdate="OnUpdate">
+    </DiaryCardListContent>
+}
 
 <NotFound Show="!Value.Any()" Text="@(NotFoundText ?? I18n.T("Diary.NoDiary"))"></NotFound>
-
-<SelectTags @bind-Value="ShowSelectTag"
-@bind-Values="SelectedTags"
-            Tags="Tags"
-            TagsChanged="TagsChanged"
-            OnSave="SaveSelectTags">
-</SelectTags>
-
-<DeleteDialog @bind-Value="ShowDeleteDiary"
-              Title="@(I18n.T("Diary.Delete.Title"))"
-              Content="@(I18n.T("Diary.Delete.Content"))"
-              OnOK="()=>HandleDelete(SelectedDiary)">
-</DeleteDialog>
-
-<ExportDialog @bind-Value="ShowExport"
-              Diaries="ExportDiaries">
-</ExportDialog>
