--- a/SwashbucklerDiary/Components/MyComponents/TagCard/TagCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard/TagCardList.razor
@@ -2,7 +2,7 @@
 @inherits MyComponentBase
 
 <div class="my-card-list">
-    @foreach (var item in InternalValue)
+    @foreach (var item in Value)
     {
         <TagCard @key="item.Id"
                  Value="item"
@@ -11,20 +11,7 @@
                  OnClick="HandleClick">
         </TagCard>
     }
-    <MInfiniteScroll Style="width:100%;"
-                     OnLoad="@OnLoad"
-                     Parent="ScrollParent"
-                     EmptyText="@(string.Empty)"
-                     LoadingText="@(string.Empty)">
-        <LoadMoreContent Context="load">
-            <div class="@(InternalValue.Any()?"":"d-none")">
-                <MButton Icon="true"
-                         OnClick="@load">
-                    <MIcon>mdi-reload</MIcon>
-                </MButton>
-            </div>
-        </LoadMoreContent>
-    </MInfiniteScroll>
+
 </div>
 
 @if (!Value.Any())
