💄 style: update style

--- a/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
@@ -20,7 +20,8 @@
 </div>
 
 <MDialog Value="SelectedLanguage && Show"
-         MaxWidth="420">
+         MaxWidth="420"
+         Eager="true">
     <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold justify-center">
             @(I18n.T("AgreementAndPolicy.Title"))
