--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -208,3 +208,6 @@
 @bind-Date="CreateDate"
                  Max="DateOnly.FromDateTime(DateTime.Now)">
 </MultiDatePicker>
+
+<MOverlay Value="Overlay" Opacity="0">
+</MOverlay>
