🐛 fix: InputDialogs sometimes display incorrect text

--- a/SwashbucklerDiary/Components/MyComponents/LocationCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/LocationCardList.razor
@@ -21,7 +21,7 @@
 }
 
 <InputDialog @bind-Value="ShowRename"
-@bind-Text="@(SelectedLocation.Name)"
+             Text="@(SelectedLocation.Name)"
              Title="@(I18n.T("Location.Rename"))"
              Placeholder="@(I18n.T("Location.Placeholder"))"
              OnOK="HandleRename">
