--- a/SwashbucklerDiary/Pages/IndexPage.razor
+++ b/SwashbucklerDiary/Pages/IndexPage.razor
@@ -49,7 +49,9 @@
         </DiaryCardList>
     </SwiperTabItem>
     <SwiperTabItem>
-        <TagCardList @bind-Value="Tags"></TagCardList>
+        <TagCardList @bind-Value="Tags"
+                     Diaries="Diaries">
+        </TagCardList>
     </SwiperTabItem>
 </SwiperTabItems>
 
