--- a/SwashbucklerDiary/Components/MyComponents/TagCard/TagCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard/TagCard.razor
@@ -8,7 +8,7 @@
            Ripple="false"
            Rounded="@("lg")"
     @oncontextmenu="()=>ShowMenu=true"
-           OnClick="()=>OnClick.InvokeAsync(Value)">
+           OnClick="ToTagPage">
         <MListItem>
             <MListItemIcon>
                 <MIcon>
@@ -17,7 +17,7 @@
             </MListItemIcon>
 
             <MListItemContent>
-                @(Value!.Name)
+                @(Value.Name)
             </MListItemContent>
 
             <MListItemContent Class="setting-state">
